# zerolist

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CONTRIBUTING.md  LICENSE  README.md  babel.config.js  jest.config.js  lefthook.yml  mise.toml  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
apps/example/: app.json  babel.config.js  index.js  metro.config.js  package.json  react-native.config.js
apps/example/android/: settings.gradle
apps/example/android/app/: build-zlbridge.sh  build.gradle
apps/example/android/app/src/main/: AndroidManifest.xml
apps/example/android/app/src/main/cpp/: CMakeLists.txt  zlbridge.cpp
apps/example/ios/: Podfile
apps/example/ios/ZerolistExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard  ZlPoolListComponentView.mm
apps/example/ios/ZerolistExample.xcodeproj/: project.pbxproj
apps/example/ios/ZerolistExample.xcodeproj/xcshareddata/xcschemes/: ZerolistExample.xcscheme
apps/example/ios/ZerolistExample.xcworkspace/: contents.xcworkspacedata
apps/example/maestro/: README.md  discriminate.sh  phasebench.sh  prep.yaml  scroll.yaml
apps/example/specs/: ZlNativeListNativeComponent.ts  ZlPoolListNativeComponent.ts  ZlZigListNativeComponent.ts
apps/example/src/: App.tsx  Solo.tsx
apps/example/src/harness/: Harness.tsx  cells.tsx  data.ts  flingDriver.ts  instrument.ts  metrics.ts  types.ts  util.ts
apps/example/src/harness/engines/: flashlist.tsx  flatlist.tsx  index.ts  legend.tsx  native.tsx  nativezig.tsx  shared.tsx  zerolist.tsx  zigpool.tsx
(+10 files in other folders)
